k8s-yamls/booking-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: aakashpatel22/booking-service:latest
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
