k8s-yamls/showtime-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showtime-service
  namespace: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showtime-service
  template:
    metadata:
      labels:
        app: showtime-service
    spec:
      containers:
        - name: showtime-service
          image: aakashpatel22/showtime-service:latest
          ports:
            - containerPort: 3004
