k8s-yamls/booking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: movie-app
spec:
  selector:
    app: booking-service
  ports:
    - port: 3003
      targetPort: 3003
