k8s-yamls/elk.yaml
# =================== Elasticsearch ===================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: movie-app
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.16.2
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: elastic-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elastic-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: movie-app
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
      name: http
    - port: 9300
      targetPort: 9300
      name: transport
  type: ClusterIP

# =================== Logstash ===================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: movie-app
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: logstash:7.16.2
          ports:
            - containerPort: 5044
            - containerPort: 9600
          volumeMounts:
            - name: logstash-config
              mountPath: /logstash_dir
          command: ["logstash", "-f", "/logstash_dir/logstash.conf"]
      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: movie-app
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      targetPort: 5044
      name: beats
    - port: 9600
      targetPort: 9600
      name: monitoring
  type: ClusterIP

# =================== Kibana ===================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: movie-app
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.16.2
          ports:
            - containerPort: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: movie-app
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30001
      name: http
  type: NodePort

# =================== Logstash ConfigMap ===================
