k8s-yamls/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: movie-app
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
