k8s-yamls/showtime-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showtime-service
  namespace: movie-app
spec:
  selector:
    app: showtime-service
  ports:
    - port: 3004
      targetPort: 3004
