k8s-yamls/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: movie-app
spec:
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
